crates/cypher-fmt/src/snapshots/cypher_fmt__tests__snap_block_comment.snap
---
source: crates/cypher-fmt/src/lib.rs
expression: "fmt(\"/* find all */ MATCH (n) RETURN n\")"
---
/* find all */
MATCH (n)
RETURN n
