crates/cypher-fmt/src/snapshots/cypher_fmt__tests__snap_block_comment_multiline.snap
---
source: crates/cypher-fmt/src/lib.rs
expression: "fmt(\"/* \\n  find all nodes\\n  in the graph\\n*/\\nMATCH (n) RETURN n\")"
---
/* 
  find all nodes
  in the graph
*/
MATCH (n)
RETURN n
