crates/cypher-fmt/src/snapshots/cypher_fmt__tests__snap_keyword_lower_match_return.snap
---
source: crates/cypher-fmt/src/lib.rs
expression: "format_with(\"MATCH (n) RETURN n\", &opts).unwrap()"
---
match (n)
return n
