crates/cypher-fmt/src/snapshots/cypher_fmt__tests__snap_keyword_lower_where.snap
---
source: crates/cypher-fmt/src/lib.rs
expression: "format_with(\"MATCH (n) WHERE n.age > 21 RETURN n\", &opts).unwrap()"
---
match (n)
where n.age > 21
return n
