crates/cypher-fmt/src/snapshots/cypher_fmt__tests__snap_line_comment_before_clause.snap
---
source: crates/cypher-fmt/src/lib.rs
expression: "fmt(\"// find users\\nMATCH (n) RETURN n\")"
---
// find users
MATCH (n)
RETURN n
