crates/cypher-fmt/src/snapshots/cypher_fmt__tests__snap_line_comment_end_of_line.snap
---
source: crates/cypher-fmt/src/lib.rs
expression: "fmt(\"MATCH (n) // get node\\nRETURN n\")"
---
MATCH (n) // get node
RETURN n
