crates/cypher-fmt/src/snapshots/cypher_fmt__tests__snap_malformed_incomplete.snap
---
source: crates/cypher-fmt/src/lib.rs
expression: "fmt(\"MATCH (n) WHERE\")"
---
MATCH (n)
WHERE
